feat(conversational-ui): add test command to justfile for streamlined testing 🧪✨

--- a/conversational-ui/justfile
+++ b/conversational-ui/justfile
@@ -40,6 +40,11 @@ build:
     @echo "Building the project..."
     @pnpm build
 
+# 🧪 Run tests
+test:
+    @echo "Running tests..."
+    @pnpm test
+
 # 📐 Lint the code
 lint:
     @echo "Linting the code..."
