--- a/conversational-ui/.env.example
+++ b/conversational-ui/.env.example
@@ -30,6 +30,9 @@ BLOB_REGION=us-east-1
 
 # CUDU API endpoint for repository connections (server-side)
 CUDU_ENDPOINT=http://localhost:3001
+# Umans Code gateway (server-side)
+CODE_GATEWAY_URL=https://api.code.umans.ai
+CODE_GATEWAY_ADMIN_TOKEN=****
 
 # EMAIL configuration for sending emails
 EMAIL_API_KEY=****
