fix(ci): use setup-just in CD workflow ✨

--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -68,9 +68,7 @@ jobs:
         with:
           terraform_version: "~1.10"
 
-      - name: Install just
-        run: |
-          curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
+      - uses: extractions/setup-just@v2
 
       # Add authentication steps here if needed
       - name: Configure AWS credentials
@@ -241,9 +239,7 @@ jobs:
         with:
           terraform_version: "~1.10"
 
-      - name: Install just
-        run: |
-          curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
+      - uses: extractions/setup-just@v2
 
       - name: Install uv
         uses: astral-sh/setup-uv@v3
@@ -403,9 +399,7 @@ jobs:
         with:
           terraform_version: "~1.10"
 
-      - name: Install just
-        run: |
-          curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
+      - uses: extractions/setup-just@v2
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -459,9 +453,7 @@ jobs:
         with:
           terraform_version: "~1.10"
 
-      - name: Install just
-        run: |
-          curl --proto '=https' --tlsv1.2 -sSf https://just.systems/install.sh | bash -s -- --to /usr/local/bin
+      - uses: extractions/setup-just@v2
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
