feat(dev): add code offer test users to seed script
Enhanced seed-test to create three test users:
- playwright-test@umans.local (basic user)
- test-code-pro@umans.local (code_pro pledge)
- test-code-max@umans.local (code_max pledge)

All users have password 'test123' and verified emails.
This enables local testing of the code offer dashboard
including API key generation and billing tabs.

--- a/conversational-ui/justfile
+++ b/conversational-ui/justfile
@@ -30,7 +30,7 @@ migrate:
     @echo "Migrating the database..."
     @pnpm run db:migrate
 
-# 🌱 Seed test user for Playwright/E2E testing (playwright-test@umans.local / test123)
+# 🌱 Seed test users (basic, code_pro, code_max - all password: test123)
 seed-test:
     @pnpm run db:seed-test
 
