fix(ui): ensure just dev waits for postgres readiness
- Add pg_isready wait loop to start-services target
- Update AGENTS.md to clarify that just dev alone is sufficient
- Remove redundant start-services step from documentation

--- a/conversational-ui/justfile
+++ b/conversational-ui/justfile
@@ -10,10 +10,13 @@ supabase:
     @echo "Starting local Supabase server..."
     supabase start --exclude=vector
 
-# 🔌 start backing services
+# 🔌 start backing services (waits for postgres to be ready)
 start-services:
     @echo "Starting backing services..."
     @docker-compose up -d
+    @echo "⏳ Waiting for postgres to be ready..."
+    @until docker exec postgres-umansuidb pg_isready -U user -d umansuidb > /dev/null 2>&1; do sleep 1; done
+    @echo "✅ Postgres is ready!"
 
 # 🛑 stop backing services
 stop-services:
