--- a/blog/package.json
+++ b/blog/package.json
@@ -23,10 +23,13 @@
         "@fontsource-variable/newsreader": "^5.2.10",
         "@tailwindcss/vite": "^4.1.17",
         "astro": "^5.16.15",
+        "katex": "^0.16.28",
         "marked": "^17.0.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "react-icons": "^5.5.0",
+        "rehype-katex": "^7.0.1",
+        "remark-math": "^6.0.0",
         "sharp": "^0.34.5",
         "tailwindcss": "^4.1.17"
     },
