--- a/.github/workflows/cd-workflow.yml
+++ b/.github/workflows/cd-workflow.yml
@@ -128,6 +128,7 @@ jobs:
           context: 'issue-solver'
           file: issue-solver/webapi.Dockerfile
           push: true
+          provenance: false
           tags: |
             ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-3.amazonaws.com/umans-platform:umans-platform-webapi-${{ github.sha }}
             ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-3.amazonaws.com/umans-platform:umans-platform-webapi-${{ env.IMAGE_ENV_TAG }}
@@ -173,6 +174,7 @@ jobs:
           context: 'issue-solver'
           file: issue-solver/worker.Dockerfile
           push: true
+          provenance: false
           tags: |
             ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-3.amazonaws.com/umans-platform:umans-platform-worker-${{ github.sha }}
             ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.eu-west-3.amazonaws.com/umans-platform:umans-platform-worker-${{ env.IMAGE_ENV_TAG }}
