--- a/conversational-ui/.env.example
+++ b/conversational-ui/.env.example
@@ -41,3 +41,8 @@ EMAIL_FROM="mailer@domain.com"
 
 STRIPE_SECRET_KEY=sk_test_yourS3c9retKey
 STRIPE_WEBHOOK_SECRET=whsec_*****
+
+# Optional Google Ads conversion tracking
+# Example: GOOGLE_ADS_ID=AW-17958333505
+GOOGLE_ADS_ID=
+GOOGLE_ADS_PURCHASE_LABEL=
